--- a/DecimoPrimeraSemana/springboottv/userapp/src/main/resources/templates/details.html
+++ b/DecimoPrimeraSemana/springboottv/userapp/src/main/resources/templates/details.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
+    <title>SpringBoot3</title>
 </head>
 <body>
-    <h1>Hola mundo desde detials</h1>
+    <h1>Hola Mundo!</h1>
+    <h1 th:text="${title}"></h1>
+    <ul>
+        <!-- getName() -->
+        <li th:text="${user.name}"></li>
+        <li th:text="${user.lastname}"></li>
+        <li th:text="${user.birthday}"></li>
+        <li th:if="${user.email}" th:text="${user.email}"></li>
+        <li th:if="${user.email == null}" th:text="${'No hay email de usuario'}"></li>
+    </ul>
 </body>
 </html>
